Изменен главный экран, добавлен splash, политика конфиденциальности

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,11 @@
     <string name="lessons_btn"><i>К урокам</i></string>
     <string name="write">Написать разработчику</string>
     <string name="main_description">Рад видеть тебя в моём приложении по изучению языка программирования <b>JAVA</b>\n\nВы, скорее всего уже знаете, что <b>Java</b> присутствует во всех сферах жизни и решает практически любые задачи. \nНа <b>Java</b> пишутся программы,серверные приложения и веб приложения.\n\n Этот курс предназначен для новичков,которые хотят получить начальные теретические знания.\n\nВы изучите <b>основы Java, объектно-ориентированное программирование, коллекции</b>. \n\nОчень приятный бонус данного приложения - здесь есть книги, которые вы сможете выбрать и скачать бесплатно. Вскоре здесь появятся ответы на вопросы и тесты для более лучшего закреления материала\n\nИсточник материалов взят с сайта <b>metanit.com</b>. Также используется информация с книг по <b>Java</b>  \n\nУделяю особое внимание обратной связи.\n\n <b>Удачного обучения!!!</b> </string>
+    <string name="main_description_fragment01"><b>Список тем которые вы изучите:</b>\n 1) Первая программа\n2) Переменные\n3) Типы данных\n4) Консольный ввод\n5) Арифметические операции\n6) Поразрядные операции\n7) Условные выражения\n8) Операции присваивания\n9) Преобразование базовых типов данных\n10) Условные конструкции\n11) Циклы\n12) Массивы\n13) Методы\n14) Параметры методов\n15) Оператор return\n16) Перегрузка методов\n17) Рекурсивные функции\n18) Обработка исключений\n19) Классы и объекты\n20) Пакеты\n21) Модификаторы доступа и инкапсуляция\n22) Статический модификатор\n23) Объекты как параметры методов\n24) Внутренние и вложенные классы\n25) Наследование\n26) Абстрактные классы\n27) Иерархия наследования\n28) Интерфейсы\n29) Интерфейсы в механизме обратного вызова\n30) Перечисления enum\n31) Класс Object и его методы\n32) Обобщения (Generics)\n33) Ограничения обобщений\n34) Наследование и обобщения\n35) Ссылочные типы и копирование объектов\n36) Обработка исключений\n37) Классы исключений\n38) Создание своих классов исключений\n39) Типы коллекций\n40) Класс ArrayList и интерфейс List\n41) Очереди и класс ArrayDeque\n42) Класс LinkedList\n43) Интерфейс Set и класс HashSet\n44) SortedSet, NavigableSet, TreeSet\n45) Интерфейсы Comparable и Comparator\n46) Интерфейс Map и класс HashMap\n47) Интерфейсы SortedMap и NavigableMap\n48) Итераторы </string>
+    <string name="hello_friend">Привет,друг!</string>
+    <string name="hello_friend_happy">Рад видеть тебя в моём приложении по изучению языка программирования <b>JAVA</b></string>
+    <string name="main_description_fragment02">Так же вы можете ознакомиться с основными определениями в разделе ПОЯСНЕНИЯ и с <b>книгами</b> в разделе КНИГИ и скачать их по необходимости</string>
+
 
     <string name="fragment02_01"><b>Объект</b> — объекты имеют состояние и поведение. Например: собака может иметь состояние — цвет, имя, а также и поведение — кивать, бежать, лаять, кушать. Объект является экземпляром класса</string>
     <string name="fragment02_02"><b>Класс</b> – это компонент языка Java, из которого создаются отдельные объекты</string>
@@ -768,7 +773,7 @@
 
     <string name="book34_title">Современное визуальное программирование на Java</string>
     <string name="book34_description">В учебном пособии рассматриваются вопросы создания кроссплатформенных программ с графическим интерфейсом на современном языке программирования <b>Java</b> в среде разработки <b>NetBeans</b>. \n\nУчебное пособие представляет интерес для студентов специальностей «Вычислительная техника и программное обеспечение», «Информационные системы», «Информатика», а также для всех желающих, которые хотят войти в профессиональный мир программирования на <b>Java</b>.</string>
-    <string name="hello_friend">Привет,друг!</string>
+
 
 
 </resources>
